Adding test to exhibit issue

--- a/ansible_collections/arista/avd/molecule/eos_designs-l2ls/intended/configs/BGP-LEAF1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs-l2ls/intended/configs/BGP-LEAF1.cfg
@@ -20,13 +20,16 @@ vlan 100
 vlan 200
    name SVI_200
 !
+vlan 4092
+   name INBAND_MGMT
+!
 vrf instance MGMT
 !
 interface Port-Channel1
    description BGP_SPINES_Po1
    no shutdown
    switchport
-   switchport trunk allowed vlan 1,100,200
+   switchport trunk allowed vlan 1,100,200,4092
    switchport mode trunk
 !
 interface Ethernet1
@@ -78,9 +81,16 @@ interface Ethernet14
    switchport phone trunk untagged
    switchport mode trunk phone
    switchport
+!
+interface Vlan4092
+   description Inband Management
+   no shutdown
+   mtu 1500
+   ip address 172.23.254.4/24
 no ip routing vrf MGMT
 !
 ip route vrf MGMT 0.0.0.0/0 172.31.0.1
+ip route 0.0.0.0/0 172.23.254.1
 !
 management api http-commands
    protocol https
