--- a/ansible_collections/arista/avd/molecule/eos_designs-l2ls/intended/configs/ISIS-LEAF1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs-l2ls/intended/configs/ISIS-LEAF1.cfg
@@ -14,13 +14,16 @@ no aaa root
 vlan 110
    name SVI_110
 !
+vlan 4092
+   name INBAND_MGMT
+!
 vrf instance MGMT
 !
 interface Port-Channel1
    description ISIS-SPINE1_Po1
    no shutdown
    switchport
-   switchport trunk allowed vlan 110
+   switchport trunk allowed vlan 110,4092
    switchport mode trunk
 !
 interface Ethernet1
@@ -33,9 +36,16 @@ interface Management1
    no shutdown
    vrf MGMT
    ip address 192.168.200.105/24
+!
+interface Vlan4092
+   description Inband Management
+   no shutdown
+   mtu 1500
+   ip address 172.23.254.4/24
 no ip routing vrf MGMT
 !
 ip route vrf MGMT 0.0.0.0/0 172.31.0.1
+ip route 0.0.0.0/0 172.23.254.1
 !
 management api http-commands
    protocol https
