--- a/ansible_collections/arista/avd/molecule/eos_designs-l2ls/intended/configs/ISIS-SPINE1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs-l2ls/intended/configs/ISIS-SPINE1.cfg
@@ -14,13 +14,16 @@ no aaa root
 vlan 110
    name SVI_110
 !
+vlan 4092
+   name INBAND_MGMT
+!
 vrf instance MGMT
 !
 interface Port-Channel1
    description ISIS-LEAF1_Po1
    no shutdown
    switchport
-   switchport trunk allowed vlan 110
+   switchport trunk allowed vlan 110,4092
    switchport mode trunk
 !
 interface Ethernet1
@@ -52,6 +55,14 @@ interface Vlan110
    description SVI_110
    no shutdown
    ip address virtual 10.0.110.1/24
+!
+interface Vlan4092
+   description Inband Management
+   no shutdown
+   mtu 1500
+   ip address 172.23.254.2/24
+   ip attached-host route export 19
+   ip virtual-router address 172.23.254.1
 !
 ip virtual-router mac-address 00:1c:73:00:00:9a
 !
