--- a/ansible_collections/arista/avd/molecule/eos_designs-l2ls/intended/configs/OSPF-SPINE2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs-l2ls/intended/configs/OSPF-SPINE2.cfg
@@ -16,6 +16,9 @@ no aaa root
 vlan 100
    name SVI_100
 !
+vlan 4092
+   name INBAND_MGMT
+!
 vlan 4094
    name MLAG_PEER
    trunk group MLAG
@@ -26,7 +29,7 @@ interface Port-Channel1
    description OSPF-LEAF1_Po1
    no shutdown
    switchport
-   switchport trunk allowed vlan 100
+   switchport trunk allowed vlan 100,4092
    switchport mode trunk
    mlag 1
 !
@@ -34,7 +37,7 @@ interface Port-Channel2
    description OSPF-LEAF2_Po1
    no shutdown
    switchport
-   switchport trunk allowed vlan 100
+   switchport trunk allowed vlan 100,4092
    switchport mode trunk
    mlag 2
 !
@@ -85,6 +88,14 @@ interface Vlan100
    description SVI_100
    no shutdown
    ip address virtual 10.0.100.1/24
+!
+interface Vlan4092
+   description Inband Management
+   no shutdown
+   mtu 1500
+   ip address 172.23.254.3/24
+   ip attached-host route export 19
+   ip virtual-router address 172.23.254.1
 !
 interface Vlan4094
    description MLAG_PEER
