--- a/ansible_collections/arista/avd/molecule/eos_designs-l2ls/inventory/group_vars/BGP_LEAFS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs-l2ls/inventory/group_vars/BGP_LEAFS.yml
@@ -7,6 +7,7 @@ leaf:
     uplink_interfaces: [ Ethernet1, Ethernet2 ]
     filter:
       only_vlans_in_use: true
+    inband_mgmt_subnet: 172.23.254.0/24
   nodes:
     - name: BGP-LEAF1
       id: 1
