--- a/ansible_collections/arista/avd/molecule/eos_designs-l2ls/inventory/group_vars/OSPF_LEAFS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs-l2ls/inventory/group_vars/OSPF_LEAFS.yml
@@ -5,6 +5,7 @@ leaf:
   defaults:
     uplink_switches: [ OSPF-SPINE1, OSPF-SPINE2 ]
     uplink_interfaces: [ Ethernet1, Ethernet2 ]
+    inband_mgmt_subnet: 172.23.254.0/24
   nodes:
     - name: OSPF-LEAF1
       id: 1
