--- a/ansible_collections/arista/avd/molecule/eos_designs-l2ls/intended/configs/L2ONLY-LEAF2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs-l2ls/intended/configs/L2ONLY-LEAF2.cfg
@@ -14,13 +14,16 @@ no aaa root
 vlan 100
    name L2VLAN_100
 !
+vlan 4092
+   name INBAND_MGMT
+!
 vrf instance MGMT
 !
 interface Port-Channel1
    description L2ONLY_SPINES_Po2
    no shutdown
    switchport
-   switchport trunk allowed vlan 100
+   switchport trunk allowed vlan 100,4092
    switchport mode trunk
 !
 interface Ethernet1
@@ -46,9 +49,16 @@ interface Ethernet11
    switchport access vlan 100
    switchport mode access
    switchport
+!
+interface Vlan4092
+   description Inband Management
+   no shutdown
+   mtu 1500
+   ip address 172.23.254.5/24
 no ip routing vrf MGMT
 !
 ip route vrf MGMT 0.0.0.0/0 172.31.0.1
+ip route 0.0.0.0/0 172.23.254.1
 !
 management api http-commands
    protocol https
