--- a/ansible_collections/arista/avd/molecule/eos_designs-l2ls/intended/structured_configs/BGP-SPINE2.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs-l2ls/intended/structured_configs/BGP-SPINE2.yml
@@ -43,6 +43,7 @@ router_bgp:
   redistribute_routes:
   - source_protocol: connected
   - source_protocol: static
+  - source_protocol: attached-host
 static_routes:
 - vrf: MGMT
   destination_address_prefix: 0.0.0.0/0
@@ -84,6 +85,9 @@ vlans:
 - id: 220
   name: SVI_220
   tenant: L2LS_BGP
+- id: 4092
+  tenant: system
+  name: INBAND_MGMT
 vlan_interfaces:
 - name: Vlan4094
   description: MLAG_PEER
@@ -111,6 +115,16 @@ vlan_interfaces:
   description: SVI_220
   shutdown: false
   ip_address_virtual: 10.1.220.1/24
+- name: Vlan4092
+  description: Inband Management
+  shutdown: false
+  mtu: 1500
+  ip_attached_host_route_export:
+    enabled: true
+    distance: 19
+  ip_address: 172.23.254.3/24
+  ip_virtual_router_addresses:
+  - 172.23.254.1
 port_channel_interfaces:
 - name: Port-Channel3
   description: MLAG_PEER_BGP-SPINE1_Po3
@@ -125,14 +139,14 @@ port_channel_interfaces:
   type: switched
   shutdown: false
   mode: trunk
-  vlans: 1,100,200
+  vlans: 1,100,200,4092
   mlag: 1
 - name: Port-Channel2
   description: BGP-LEAF2_Po1
   type: switched
   shutdown: false
   mode: trunk
-  vlans: '100'
+  vlans: 100,4092
   mlag: 2
 ethernet_interfaces:
 - name: Ethernet3
@@ -199,6 +213,12 @@ route_maps:
     set:
     - origin incomplete
     description: Make routes learned over MLAG Peer-link less preferred on spines to ensure optimal routing
+- name: RM-CONN-2-BGP
+  sequence_numbers:
+  - sequence: 20
+    type: permit
+    match:
+    - ip address prefix-list PL-L2LEAF-INBAND-MGMT
 loopback_interfaces:
 - name: Loopback0
   description: Router_ID
@@ -207,3 +227,8 @@ loopback_interfaces:
 ip_igmp_snooping:
   globally_enabled: true
 ip_virtual_router_mac_address: 00:1c:73:00:00:99
+prefix_lists:
+- name: PL-L2LEAF-INBAND-MGMT
+  sequence_numbers:
+  - sequence: 10
+    action: permit 172.23.254.0/24
