--- a/ansible_collections/arista/avd/molecule/eos_designs-l2ls/intended/structured_configs/ISIS-LEAF1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs-l2ls/intended/structured_configs/ISIS-LEAF1.yml
@@ -4,6 +4,8 @@ static_routes:
 - vrf: MGMT
   destination_address_prefix: 0.0.0.0/0
   gateway: 172.31.0.1
+- destination_address_prefix: 0.0.0.0/0
+  gateway: 172.23.254.1
 service_routing_protocols_model: multi-agent
 vlan_internal_order:
   allocation: ascending
@@ -42,12 +44,22 @@ port_channel_interfaces:
   type: switched
   shutdown: false
   mode: trunk
-  vlans: '110'
+  vlans: 110,4092
 vlans:
 - id: 110
   name: SVI_110
   tenant: L2LS_ISIS
+- id: 4092
+  tenant: system
+  name: INBAND_MGMT
 ip_igmp_snooping:
   globally_enabled: true
+vlan_interfaces:
+- name: Vlan4092
+  description: Inband Management
+  shutdown: false
+  mtu: 1500
+  ip_address: 172.23.254.4/24
+  type: inband_mgmt
 metadata:
   platform: vEOS-LAB
