--- a/ansible_collections/arista/avd/molecule/eos_designs-l2ls/inventory/group_vars/L2ONLY_LEAFS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs-l2ls/inventory/group_vars/L2ONLY_LEAFS.yml
@@ -5,6 +5,7 @@ leaf:
   defaults:
     uplink_switches: [ L2ONLY-SPINE1, L2ONLY-SPINE2 ]
     uplink_interfaces: [ Ethernet1, Ethernet2 ]
+    inband_mgmt_subnet: 172.23.254.0/24
   nodes:
     - name: L2ONLY-LEAF1
       id: 1
