Updating  missing configurations

--- a/.github/workflows/pull-request-triage.yml
+++ b/.github/workflows/pull-request-triage.yml
@@ -16,6 +16,9 @@ jobs:
     name: "PR Labeller"
     # https://github.com/actions/labeler
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
     steps:
       - uses: actions/labeler@v5
         with:
