--- a/.github/requirements-ci.txt
+++ b/.github/requirements-ci.txt
@@ -4,4 +4,4 @@
 #
 # The paths are relative to the root of the repo, so this only works when executed from there.
 -e python-avd --config-settings editable_mode=compat
--r ansible-collection/arista.avd./requirements.txt
+-r ansible_collections/arista/avd/requirements.txt
