--- a/.github/workflows/pull-request-management.yml
+++ b/.github/workflows/pull-request-management.yml
@@ -351,7 +351,7 @@ jobs:
       - name: 'Run ansible-test sanity'
         run: |
           cd ansible_collections/arista/avd/
-          ansible-test sanity --color yes -v --requirements --docker
+          ansible-test sanity --color yes -v
 
   ansible_test_units:
     name: Run ansible-test units test cases
@@ -370,7 +370,7 @@ jobs:
       - name: 'Run ansible-test units test cases'
         run: |
           cd ansible_collections/arista/avd/
-          ansible-test units --requirements --docker -vv
+          ansible-test units -vv
 
   ansible_test_integration:
     name: Run ansible-test integration test cases
@@ -394,7 +394,7 @@ jobs:
       - name: 'Run ansible-test integration test cases'
         run: |
           cd ansible_collections/arista/avd/
-          ansible-test integration --requirements --docker -vv
+          ansible-test integration -vv
 
   ansible_lint:
     name: Run ansible-lint test case
