--- a/.github/workflows/pull-request-management.yml
+++ b/.github/workflows/pull-request-management.yml
@@ -84,7 +84,10 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        python_version: [ "3.9", "3.10", "3.11", "3.12" ]
+        python_version:
+          - "3.10"
+          - "3.11"
+          - "3.12"
     steps:
       - name: 'Set environment variables'
         run: |
@@ -364,6 +367,11 @@ jobs:
       - uses: actions/checkout@v4
       - name: Set up Python 3
         uses: actions/setup-python@v5
+        with:
+          python-version: |
+            3.10
+            3.11
+            3.12
       - name: 'Install Python requirements'
         run: |
           pip install -r ansible_collections/arista/avd/requirements.txt -r ansible_collections/arista/avd/requirements-dev.txt --upgrade
