more documentation updates!

--- a/ansible_collections/arista/avd/molecule/Makefile
+++ b/ansible_collections/arista/avd/molecule/Makefile
@@ -1,6 +1,6 @@
 
 MOLECULE ?= eos_cli_config_gen
-ANSIBLE_OPTIONS ?=
+ANSIBLE_OPTIONS ?= --forks 5
 
 .PHONY: help
 help: ## Display help message.
@@ -11,12 +11,12 @@ help: ## Display help message.
 ###############################################################################
 
 .PHONY: test
-test: ## Execute molecule "test" sequence. Specify scenario name (default: eos_cli_config_gen) with MOLECULE= and Ansible options (default none) with ANSIBLE_OPTIONS=.
+test: ## Execute molecule "converge" sequence. Specify scenario name with `MOLECULE=<scenario_name>` (default: `eos_cli_config_gen`) and Ansible options with `ANSIBLE_OPTIONS=<options>` (default: `--forks 5`).
 	cd .. && \
 	molecule test --scenario-name $(MOLECULE) -- $(ANSIBLE_OPTIONS)
 
 .PHONY: converge
-converge: ## Execute molecule "converge" sequence. Specify scenario name (default: eos_cli_config_gen) with MOLECULE= and Ansible options (default none) with ANSIBLE_OPTIONS=.
+converge: ## Execute molecule "converge" sequence. Specify scenario name with `MOLECULE=<scenario_name>` (default: `eos_cli_config_gen`) and Ansible options with `ANSIBLE_OPTIONS=<options>` (default: `--forks 5`).
 	cd .. && \
 	molecule converge --scenario-name $(MOLECULE) -- $(ANSIBLE_OPTIONS)
 
@@ -30,23 +30,3 @@ refresh-facts: ## Run all "eos_designs" and "eos_cli_config_gen" molecule scenar
 			cd ./molecule ; \
 		fi \
 	done <MOLECULE_SCENARIOS.txt
-
-.PHONY: commit-facts
-commit-facts: ## Commit updated facts for CI with the following message: 'CI(molecule): Update Molecule artifacts'.
-	git status --short
-	git add .
-	git commit --no-verify -m 'CI(molecule): Update Molecule artifacts' ./
-
-.PHONY: sync-facts
-sync-facts: refresh-facts commit-facts ## Run refresh-facts and commit-facts to update all CI artifacts.
-
-.PHONY: cleanup
-cleanup: ## Execute molecule "cleanup" sequence on all scenarios located in the molecule directory.
-	@for MOLECULE_SCENARIO in * ; do \
-        if [ -d "$$MOLECULE_SCENARIO" ]; then\
-        echo "Run scenario for "$$MOLECULE_SCENARIO && \
-		cd .. ; \
-		molecule cleanup --scenario-name $$MOLECULE_SCENARIO -- $(ANSIBLE_OPTIONS); \
-		cd ./molecule ; \
-        fi \
-    done
