--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-base.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-base.yml
@@ -82,6 +82,8 @@ router_bgp:
       ospf_route_type: external
     - source_protocol: ospf
       ospf_route_type: nssa-external 1
+      route_map: RM-REDISTRIBUTE-OSPF-NSSA-1
+      include_leaked: true
     - source_protocol: bgp
       route_map: RM-REDISTRIBUTE-BGP
       # this should not do anything as leaked is generated when source protocol is bgp
@@ -117,6 +119,8 @@ router_bgp:
         ospf_route_type: internal
       - source_protocol: ospf
         ospf_route_type: external
+        route_map: RM-REDISTRIBUTE-OSPF-EXTERNAL
+        include_leaked: true
       - source_protocol: ospf
         ospf_route_type: nssa-external
       - source_protocol: connected
@@ -149,12 +153,12 @@ router_bgp:
         ospf_route_type: external
       - source_protocol: ospfv3
         ospf_route_type: internal
+        route_map: RM-REDISTRIBUTE-OSPF-INTERNAL
+        include_leaked: true
       - source_protocol: ospfv3
         ospf_route_type: nssa-external 1
       - source_protocol: static
         route_map: RM-IPV6-STATIC-TO-BGP
-      - source_protocol: ospfv3
-        include_leaked: true
       - source_protocol: bgp
         route_map: RM-REDISTRIBUTE-BGP
         # this should not do anything as leaked is generated when source protocol is bgp
