--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -6521,6 +6521,7 @@ $defs:
                   table: network-services-vrfs-bgp-settings
                 type: list
                 primary_key: ip_address
+                allow_duplicate_primary_key: true
                 convert_types:
                 - dict
                 description: 'List of BGP peer definitions.
