--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
@@ -2227,9 +2227,7 @@ keys:
               keys:
                 redistribute_internal:
                   type: bool
-                  description: Allow redistribution of iBGP routes into
-an Interior Gateway Protocol (IGP). EOS default is true.
-                    
+                  description: Allow redistribution of iBGP routes into an Interior Gateway Protocol (IGP). EOS default is true.
             rd:
               type: str
               description: Route distinguisher.
