Fixing the comments

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/dot1x.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/dot1x.cfg
@@ -18,13 +18,13 @@ dot1x dynamic-authorization
 dot1x
    !
    supplicant profile Profile1
-      identity <user_id>
+      identity user_id1
       eap-method tls
-      passphrase 0 <password>
+      passphrase 0 1048080A02
       ssl profile PF1
    !
    supplicant profile Profile2
-      identity <user_id>
+      identity user_id2
       passphrase 7 1048080A01
    aaa unresponsive phone action apply cached-results timeout 10 hours else traffic allow
    aaa unresponsive action traffic allow vlan 10
