--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -7319,6 +7319,16 @@ $defs:
 
               '
             type: str
+          uplink_mtu:
+            documentation_options:
+              table: node-type-uplink-configuration
+            description: Point-to-Point uplinks MTU in bytes. This setting overrides
+              the `p2p_uplinks_mtu` setting.
+            type: int
+            convert_types:
+            - str
+            min: 68
+            max: 65535
           max_uplink_switches:
             documentation_options:
               table: node-type-uplink-configuration
