--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -2931,6 +2931,7 @@ keys:
       feature_support:
         poe: true
         queue_monitor_length_notify: false
+        per_interface_mtu: false
       reload_delay:
         mlag: 300
         non_mlag: 330
@@ -2941,6 +2942,16 @@ keys:
       feature_support:
         poe: true
         queue_monitor_length_notify: false
+        per_interface_mtu: false
+      reload_delay:
+        mlag: 300
+        non_mlag: 330
+    - platforms:
+      - 7010TX
+      - 720DT
+      feature_support:
+        queue_monitor_length_notify: false
+        per_interface_mtu: false
       reload_delay:
         mlag: 300
         non_mlag: 330
