--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-evpn.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-evpn.cfg
@@ -31,7 +31,7 @@ router bgp 65101
    neighbor EVPN-OVERLAY-PEERS password shared-secret profile profile2 algorithm aes-128-cmac-96
    neighbor EVPN-OVERLAY-PEERS send-community
    neighbor EVPN-OVERLAY-PEERS maximum-routes 0
-   neighbor EVPN-OVERLAY-PEERS missing-policy address-family all direction in action permit
+   neighbor EVPN-OVERLAY-PEERS missing-policy address-family all direction out action permit
    neighbor MLAG-IPv4-UNDERLAY-PEER peer group
    neighbor MLAG-IPv4-UNDERLAY-PEER remote-as 65101
    neighbor MLAG-IPv4-UNDERLAY-PEER next-hop-self
@@ -45,7 +45,7 @@ router bgp 65101
    neighbor 192.168.255.1 allowas-in 5
    neighbor 192.168.255.1 password shared-secret profile profile1 algorithm aes-128-cmac-96
    neighbor 192.168.255.2 peer group EVPN-OVERLAY-PEERS
-   neighbor 192.168.255.2 missing-policy address-family all direction in action permit
+   neighbor 192.168.255.2 missing-policy address-family all direction out action permit
    neighbor 192.168.255.3 allowas-in 5
    neighbor 192.168.255.3 maximum-routes 52000 warning-limit 2000 warning-only
    neighbor 192.168.255.3 missing-policy address-family all direction in action deny
