--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-base.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-base.yml
@@ -53,6 +53,16 @@ router_bgp:
         enabled: true
         default: 100G
       ttl_maximum_hops: 1
+      missing_policy_af_all:
+        direction_in:
+          action: deny
+          include:
+            - community-list
+            - prefix-list
+        direction_out:
+          action: permit
+          include:
+            - community-list
     - name: test-link-bandwidth2
       link_bandwidth:
         enabled: true
@@ -208,17 +218,16 @@ router_bgp:
         all: true
       # Testing bfd false OUTSIDE a peer group that should NOT render
       bfd: false
-      missing_policy:
-        address_family_all:
-          direction_in_action:
-            action: deny
-            include:
-              - community-list
-              - prefix-list
-          direction_out_action:
-            action: permit
-            include:
-              - community-list
+      missing_policy_af_all:
+        direction_in:
+          action: deny
+          include:
+            - community-list
+            - prefix-list
+        direction_out:
+          action: permit
+          include:
+            - community-list
     - ip_address: 192.0.3.3
       remote_as: 65434
       send_community: standard
