CI(molecule): Update Molecule artifacts

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
@@ -558,3 +558,7 @@ all:
           hosts:
             DUP-LEAF1:
             DUP-LEAF2:
+        PLATFORM_SETTINGS_TESTS:
+          hosts:
+            750-LEAF:
+            7010TX-LEAF:
