Adding captive-portal start limit key

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/dot1x.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/dot1x.cfg
@@ -36,8 +36,10 @@ dot1x
    radius av-pair service-type
    radius av-pair framed-mtu 1500
    supplicant disconnect cached-results timeout 79 seconds
+   captive-portal
    captive-portal url http://portal-nacm08/captiveredirect/ ssl profile Profile1
    captive-portal access-list ipv4 ACL
+   captive-portal start limit infinite
    supplicant logging
 !
 end
