--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/dot1x.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/dot1x.schema.yml
@@ -151,6 +151,8 @@ keys:
         type: dict
         description: Web authentication feature authenticates a supplicant through a web page, referred to as a captive portal.
         keys:
+          enabled:
+            type: bool
           url:
             type: str
             description: |-
@@ -160,6 +162,9 @@ keys:
           ssl_profile:
             type: str
             description: SSL profile name.
+          start_limit_infinite:
+            type: bool
+            description: Set captive-portal start limit to infinte.
           access_list_ipv4:
             type: str
             description: Standard access-list name.
@@ -211,4 +216,4 @@ keys:
               - "str"
             min: 60
             max: 65535
-            description: Timeout period in seconds.
+            description: Timeout in seconds for removing a disconnected supplicant.
