Fix(eos_cli_config_gen): Fix the documentation template for event-handlers

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/event-handlers.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/event-handlers.cfg
@@ -34,6 +34,11 @@ event-handler trigger-on-counters
       granularity per-source
    action log
 !
+event-handler trigger-on-counters2
+   trigger on-counters
+      condition ( Arad*.IptCrcErrCnt.delta > 100 ) and ( Arad*.UcFifoFullDrop.delta > 100 )
+      granularity per-source
+!
 event-handler trigger-on-intf
    trigger on-intf Ethernet4 operstatus ip ip6
 !
@@ -42,6 +47,10 @@ event-handler trigger-on-logging
       poll interval 10
       regex ab*
    action increment device-health metric Metric2
+!
+event-handler trigger-on-logging2
+   trigger on-logging
+      regex ab*
 !
 event-handler trigger-on-maintenance1
    trigger on-maintenance enter interface Management3 after stage linkdown
