--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -10607,7 +10607,8 @@ keys:
                 type: bool
           redistribute_internal:
             type: bool
-            description: Redistribute internal BGP routes.
+            description: Allow redistribution of iBGP routes into an Interior Gateway
+              Protocol (IGP). EOS default is true.
       listen_ranges:
         type: list
         description: 'Improved "listen_ranges" data model to support multiple listen
@@ -11715,7 +11716,8 @@ keys:
             keys:
               redistribute_internal:
                 type: bool
-                description: Redistribute internal BGP routes.
+                description: Allow redistribution of iBGP routes into an Interior
+                  Gateway Protocol (IGP). EOS default is true.
           peer_groups:
             type: list
             primary_key: name
@@ -12007,7 +12009,8 @@ keys:
             keys:
               redistribute_internal:
                 type: bool
-                description: Redistribute internal BGP routes.
+                description: Allow redistribution of iBGP routes into an Interior
+                  Gateway Protocol (IGP). EOS default is true.
           peer_groups:
             type: list
             primary_key: name
@@ -13240,7 +13243,8 @@ keys:
                               max: 64
                     redistribute_internal:
                       type: bool
-                      description: Redistribute internal BGP routes.
+                      description: Allow redistribution of iBGP routes into an Interior
+                        Gateway Protocol (IGP). EOS default is true.
                 neighbors:
                   type: list
                   primary_key: ip_address
@@ -13405,7 +13409,8 @@ keys:
                               max: 64
                     redistribute_internal:
                       type: bool
-                      description: Redistribute internal BGP routes.
+                      description: Allow redistribution of iBGP routes into an Interior
+                        Gateway Protocol (IGP). EOS default is true.
                 neighbors:
                   type: list
                   primary_key: ip_address
