--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
@@ -152,7 +152,7 @@ keys:
                 type: bool
           redistribute_internal:
             type: bool
-            description: Redistribute internal BGP routes.
+            description: Allow redistribution of iBGP routes into an Interior Gateway Protocol (IGP). EOS default is true.
       listen_ranges:
         type: list
         description: |
@@ -1218,7 +1218,7 @@ keys:
             keys:
               redistribute_internal:
                 type: bool
-                description: Redistribute internal BGP routes.
+                description: Allow redistribution of iBGP routes into an Interior Gateway Protocol (IGP). EOS default is true.
           peer_groups:
             type: list
             primary_key: name
@@ -1504,7 +1504,7 @@ keys:
             keys:
               redistribute_internal:
                 type: bool
-                description: Redistribute internal BGP routes.
+                description: Allow redistribution of iBGP routes into an Interior Gateway Protocol (IGP). EOS default is true.
           peer_groups:
             type: list
             primary_key: name
@@ -2697,7 +2697,7 @@ keys:
                               max: 64
                     redistribute_internal:
                       type: bool
-                      description: Redistribute internal BGP routes.
+                      description: Allow redistribution of iBGP routes into an Interior Gateway Protocol (IGP). EOS default is true.
                 neighbors:
                   type: list
                   primary_key: ip_address
@@ -2855,7 +2855,7 @@ keys:
                               max: 64
                     redistribute_internal:
                       type: bool
-                      description: Redistribute internal BGP routes.
+                      description: Allow redistribution of iBGP routes into an Interior Gateway Protocol (IGP). EOS default is true.
                 neighbors:
                   type: list
                   primary_key: ip_address
