Schema description fixes

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -1614,8 +1614,8 @@ keys:
             type: bool
           url:
             type: str
-            description: "Supported URL type:\n  - http: http[s]://<hostname>[:<port>]\n
-              \ - https: http[s]://<hostname>[:<port>]"
+            description: "Supported URL type:\n  - http: http://<hostname>[:<port>]\n
+              \ - https: https://<hostname>[:<port>]"
           ssl_profile:
             type: str
             description: SSL profile name.
