--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/dot1x.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/dot1x.schema.yml
@@ -157,8 +157,8 @@ keys:
             type: str
             description: |-
               Supported URL type:
-                - http: http[s]://<hostname>[:<port>]
-                - https: http[s]://<hostname>[:<port>]
+                - http: http://<hostname>[:<port>]
+                - https: https://<hostname>[:<port>]
           ssl_profile:
             type: str
             description: SSL profile name.
