Fixing the template

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/event-handlers.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/event-handlers.cfg
@@ -52,6 +52,9 @@ event-handler trigger-on-logging2
    trigger on-logging
       regex ab*
 !
+event-handler trigger-on-logging3
+   trigger on-logging
+!
 event-handler trigger-on-maintenance1
    trigger on-maintenance enter interface Management3 after stage linkdown
 !
