--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/event-handlers.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/event-handlers.yml
@@ -49,6 +49,8 @@ event_handlers:
     trigger: on-logging
     trigger_on_logging:
       regex: "ab*"
+  - name: trigger-on-logging3
+    trigger: on-logging
   - name: trigger-on-counters
     trigger: on-counters
     trigger_on_counters:
