Fxing the config template and test-cases

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/event-handlers.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/event-handlers.yml
@@ -23,7 +23,7 @@ event_handlers:
   - name: trigger-on-maintenance2
     trigger: on-maintenance
     trigger_on_maintenance:
-      operation: enter
+      operation: exit
       unit: unit1
       action: before
       stage: bgp
@@ -38,6 +38,11 @@ event_handlers:
       action: all
     actions:
       bash_command: echo "on-maintenance"
+  - name: trigger-on-maintenance4
+    trigger: on-maintenance
+    trigger_on_maintenance:
+      operation: enter
+      action: all
   - name: trigger-on-logging
     trigger: on-logging
     trigger_on_logging:
@@ -64,6 +69,8 @@ event_handlers:
     trigger_on_counters:
       condition: ( Arad*.IptCrcErrCnt.delta > 100 ) and ( Arad*.UcFifoFullDrop.delta > 100 )
       granularity_per_source: true
+  - name: trigger-on-counters3
+    trigger: on-counters
   - name: trigger-on-intf
     trigger: on-intf
     trigger_on_intf:
@@ -71,6 +78,8 @@ event_handlers:
       ip: true
       ipv6: true
       operstatus: true
+  - name: trigger-on-intf2
+    trigger: on-intf
   - name: trigger-vm-tracer
     trigger: "vm-tracer vm"
     actions:
